# poisson

./: .travis.yml  Cargo.toml  README.md
poisson/: Cargo.toml
poisson-visualisation/: Cargo.toml
poisson-visualisation/src/: main.rs
poisson/benches/: dim2.rs  dim3.rs  dim4.rs
poisson/src/: lib.rs
poisson/src/algorithm/: bridson.rs  ebeida.rs  mod.rs
poisson/src/utils/: math.rs  mod.rs
poisson/tests/: adding.rs  common.rs  dim2.rs  dim3.rs  dim4.rs  reproductions.rs  validity.rs
poisson/tests/helper/: mod.rs
poisson2d/: Cargo.toml
poisson2d/benches/: dim2.rs
poisson2d/src/: lib.rs
poisson2d/src/algorithm/: bridson.rs  ebeida.rs
poisson2d/src/utils/: math.rs  mod.rs
poisson2d/tests/: adding.rs  common.rs  dim2.rs  reproductions.rs  validity.rs
poisson2d/tests/helper/: mod.rs
