[package]
name = "poisson"
version = "0.10.1"
authors = ["WaDelma <>"]
description = "Poisson disk sampling generator."
repository = "https://github.com/WaDelma/poisson"
readme = "../README.md"
category = [ "algorithms" ]
keywords = [ "poisson", "disk", "sampling" ]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "WaDelma/poisson" }
coveralls = { repository = "WaDelma/poisson", service = "github" }

[dependencies]
rand = { version = "0.7", features = [ "small_rng" ] }
rand_distr = "0.2"
glam = { version = "0.9", features = [ "mint", "rand" ] }
mint = "0.5"
modulo = "0.1"
sphere = "0.3"

[dev-dependencies]
nalgebra = { version = "0.22", features = [ "alga" ] }
