[package]
name = "poisson2d"
version = "0.1.0"
authors = [ "WaDelma <>", "Ben Frankel <ben.frankel7@gmail.com>" ]
description = "Poisson disk sampling generator."
repository = "https://github.com/benfrankel/poisson2d"
readme = "../README.md"
categories = [ "algorithms" ]
keywords = [ "poisson", "disk", "sampling" ]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "benfrankel/poisson2d" }
coveralls = { repository = "benfrankel/poisson2d", service = "github" }

[dependencies]
rand = { version = "0.7", features = [ "small_rng" ] }
rand_distr = "0.2"
glam = { version = "0.9", features = [ "mint", "rand" ] }
mint = "0.5"
modulo = "0.1"
sphere = "0.3"
